[project]
name = "production-commit-tagger"
version = "0.1.0"
description = "Create tags after a production deployment"
requires-python = ">=3.11"
dependencies = [
    "python-dateutil>=2.8,<3",
    "GitPython>=3.1.40,<4",
    "PyGitHub>=2,<3",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1",
    "pytest>=8",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (catches duplicate kwargs, unused imports, undefined names)
    "I",   # isort
    "B",   # flake8-bugbear
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = false

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["*_test.py"]
